// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions > project set should work 1`] = `
Object {
  "type": "set project",
}
`;

exports[`actions > project setAll should work 1`] = `
Object {
  "type": "set projects",
}
`;

exports[`actions > project showVariant should work 1`] = `
Object {
  "type": "show variant",
}
`;
